[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognis-magicid"
version = "0.1.0"
description = "Identify true file types by magic bytes (beats extensions)"
authors = [{name = "Cognis Digital", email = "suite@cognis.digital"}]
license = {text = "LicenseRef-COCL-1.0"}
requires-python = ">=3.10"
readme = "README.md"
keywords = ["cognis-digital", "cognis-neural-suite", "secops", "magicid"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://cognis.digital"
Repository = "https://github.com/cognis-digital/magicid"

[project.scripts]
magicid = "magicid.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["magicid"]

[tool.ruff]
# HTML/CSS template strings and long error messages push past 88; use 120.
line-length = 120

[tool.ruff.lint]
select = ["F", "E"]
# E501 inside multi-line HTML f-string literals cannot be shortened without
# changing the rendered output, so we suppress it project-wide.
ignore = ["E501"]
